Update MainLayout.razor (#2)

--- a/Frontend/Shared/MainLayout.razor
+++ b/Frontend/Shared/MainLayout.razor
@@ -6,7 +6,7 @@
 
 <MudLayout>
     <MudAppBar Elevation="0">
-        <MudText Typo="Typo.subtitle1" Color="Color.Tertiary">Sensor Readings</MudText>
+        <MudText Typo="Typo.subtitle1" Color="Color.Tertiary">ACA Demo gRPC .net driven Sensor Readings</MudText>
         <MudSpacer />
     </MudAppBar>
     <MudMainContent>
